--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@phosphor-icons/react": "^2.1.5",
     "framer-motion": "^11.2.10",
     "next": "14.2.3",
+    "nextjs-progressbar": "^0.0.16",
     "react": "^18",
     "react-dom": "^18"
   },
