--- a/package.json
+++ b/package.json
@@ -11,11 +11,15 @@
   "dependencies": {
     "@nextui-org/react": "^2.4.1",
     "@phosphor-icons/react": "^2.1.5",
+    "axios": "^1.7.2",
     "framer-motion": "^11.2.10",
     "next": "14.2.3",
+    "next-auth": "^4.24.7",
     "nextjs-progressbar": "^0.0.16",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-intersection-observer": "^9.13.0",
+    "swr": "^2.2.5"
   },
   "devDependencies": {
     "@types/node": "^20",
