--- a/package.json
+++ b/package.json
@@ -13,11 +13,12 @@
     "@phosphor-icons/react": "^2.1.5",
     "axios": "^1.7.2",
     "framer-motion": "^11.2.10",
-    "next": "14.2.3",
+    "next": "^14.2.5",
     "next-auth": "^4.24.7",
     "nextjs-progressbar": "^0.0.16",
-    "react": "^18",
-    "react-dom": "^18",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-hot-toast": "^2.4.1",
     "react-intersection-observer": "^9.13.0",
     "swr": "^2.2.5"
   },
